fix(console): create connector form alignment

--- a/packages/console/src/pages/Connectors/components/CreateForm/index.module.scss
+++ b/packages/console/src/pages/Connectors/components/CreateForm/index.module.scss
@@ -8,7 +8,6 @@
     width: 230px;
 
     .logo {
-      margin: _.unit(2);
       width: 48px;
       height: 48px;
       border-radius: 8px;
